reduced common template

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/forms/static-form-fields.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/forms/static-form-fields.html
@@ -23,19 +23,9 @@
           <td>{{form.branch}}</td>
       
           </tr>
-          <tr>
-            <td>Department</td>
-            <td>{{form.department}}</td>
+         
         
-            </tr>
-        
-            <tr>
-                <td>Description</td>
-                <td>{{form.description}}</td>
-            
-                </tr>
-
-                
+         
         </tbody>
         </table>
       </div>
@@ -49,27 +39,17 @@
        <table class="table table-layout">
         <tbody>
             <tr>
-                <td>Status</td>
-                <td>{{form.status}}</td>
-            
-                </tr>
-               <tr>
-                <td>Priority</td>
-                <td>{{form.priority}}</td>
-            
-                </tr>
-                 
-            <tr>
-            <td>Delete Status</td>
+            <td>Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+        
+             <tr>
+            <td>Deletable</td>
             <td>{{form.delete_status}}</td>
         
             </tr>
-          <tr>
-                <td>Comments</td>
-                <td>{{form.comments}}</td>
-            
-                </tr>
-          
+
           </tbody>
           </table>
           </div>
@@ -83,16 +63,7 @@
        <table class="table table-layout">
         <tbody>
        
-          <tr>
-            <td>End Date</td>
-            <td>{{form.ends}}</td>
         
-            </tr>
-           <tr>
-              <td>Start Date</td>
-              <td>{{form.starts}}</td>
-          
-              </tr>
          <tr>
             <td>Operation Year</td>
             <td>{{form.operation_year}}</td>
@@ -104,12 +75,7 @@
             <td>{{form.operation_term}}</td>
         
             </tr>
-             <tr>
-            <td>Reference</td>
-            <td>{{form.reference}}</td>
-        
-            </tr>
-          
+            
           </tbody>
           </table>
   </div>
