--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/collapse-links.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/collapse-links.html
@@ -1,16 +1,8 @@
 <!--START......... Start of collapsible sectioon..........-->
   <div class="container-fluid allif-collapsible-details-section-links-wrapper">
+    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-details-section-one" aria-expanded="false" aria-controls="allif-collapsible-details-section-one">Core Details</a>
+    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-details-section-two" aria-expanded="false" aria-controls="allif-collapsible-details-section-two">Standard Details</a>
+    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-details-section-three" aria-expanded="false" aria-controls="allif-collapsible-details-section-three">General Details</a>
+    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-details-section-four" aria-expanded="false" aria-controls="allif-collapsible-details-section-four">Static Details</a>
 
-    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" 
-      data-bs-target="#allif-collapsible-details-section-one" aria-expanded="false"
-       aria-controls="allif-collapsible-details-section-one">Dynamic Details</a>
-
-        <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" 
-      data-bs-target="#allif-collapsible-details-section-two" aria-expanded="false"
-       aria-controls="allif-collapsible-details-section-two">Standard Details</a>
-
-    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" 
-      data-bs-target="#allif-collapsible-details-section-three" aria-expanded="false"
-       aria-controls="allif-collapsible-details-section-three">Static Details</a>
-
-</div>
+  </div>
