--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/single-page-links.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/single-page-links.html
@@ -1,4 +1,4 @@
- <div class="allif-single-page-tab-links-wrapper">
+<div class="allif-single-page-tab-links-wrapper">
     <ul class="nav nav-tabs allif-single-page-tab-links-wrapper" >
 
       <a class="nav-link active allif-single-page-tab-links" id="allif-single-page-tab-one-content-link-one-id" data-bs-toggle="tab"
@@ -6,10 +6,21 @@
        Core Details
       </a>
     
+      <a class="nav-link allif-single-page-tab-links" id="allif-single-page-tab-two-content-link-two-id" data-bs-toggle="tab"
+        data-bs-target="#allif-single-page-tab-two-content-link" type="button" role="tab" aria-controls="branches" aria-selected="false">
+          Standard Details
+      </a>
+       
       <a class="nav-link allif-single-page-tab-links" id="allif-single-page-tab-three-content-link-three-id" data-bs-toggle="tab" 
         data-bs-target="#allif-single-page-tab-three-content-link" type="button" role="tab" aria-controls="additional-info" aria-selected="false">
           General Details
         </a>
-
+        {% if allifapp_logged_user_category == 'admin' %}
+        <a class="nav-link allif-single-page-tab-links" id="allif-single-page-tab-four-content-link-four-id" data-bs-toggle="tab" 
+        data-bs-target="#allif-single-page-tab-four-content-link" type="button" role="tab" aria-controls="additional-info" aria-selected="false">
+          Static Details
+        </a>
+        {% endif %}
+        
       </ul>
       </div>
