--- a/static/allifapperp/css/body/mainbodyui.css
+++ b/static/allifapperp/css/body/mainbodyui.css
@@ -287,6 +287,7 @@ background-color: var(--main-background-color);
   margin-top: 0.1em;
   font-size:var(--headings-font-size);
   background-color: rgb(245, 247, 246);
+ 
   
 }
 
@@ -494,7 +495,12 @@ color: var(--main-red-color);
     background-color: var(--main-background-color);
     border-radius: var(--main-border-radius);
     margin:var(--main-content-spacer-margins);
+    margin-top: 1em;
+    
+    background-color:#f85503;
   }
+
+
 /*style for the details card*/
 .allif-details-container .allif-details-card {
   border: 0.05em solid #ddddfa;
